kubernetes/cluster/default/garage/garage-webui.yaml
# Service: Garage WebUI
# Ingress: garage.brhd.io
# Label: app.kubernetes.io/name: garage-webui
---
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
  namespace: garage
  labels:
    app.kubernetes.io/name: garage-webui
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3909
      targetPort: 3909
  selector:
    app.kubernetes.io/name: garage-webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  labels:
    app.kubernetes.io/name: garage-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: garage-webui
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: garage-webui
    spec:
      restartPolicy: Always
      containers:
        - name: garage-webui
          image: khairul169/garage-webui:1.0.9
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3909
          volumeMounts:
            - name: garage-config
              mountPath: /etc/garage.toml
              subPath: garage.toml
      volumes:
        - name: garage-config
          configMap:
            name: garage-config
