kubernetes/cluster/default/garage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-webui
  namespace: garage
  labels:
    app.kubernetes.io/name: garage-webui
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://s3.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-outpost-embedded.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
spec:
  rules:
    - host: s3.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: garage-webui
                port:
                  number: 3909
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-web
  namespace: garage
  labels:
    app.kubernetes.io/name: garage-web
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: static.s3w.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: garage
                port:
                  number: 3902
